add func: create pg and  delete pg

--- a/app/block_storage/Makefile
+++ b/app/block_storage/Makefile
@@ -5,7 +5,7 @@ include $(SPDK_ROOT_DIR)/mk/spdk.modules.mk
 
 APP = block
 
-C_SRCS := raft/src/raft_log.c  raft/src/raft_node.c raft/src/raft_server_properties.c raft/src/raft_server.c  block.c
+C_SRCS := raft/src/raft_log.c  raft/src/raft_node.c raft/src/raft_server_properties.c raft/src/raft_server.c  pg_group.c block.c
 
 CFLAGS += -Iraft/include
 
